# ETHTransactionProcessor

./: .gitignore  API_DOC.md  Dockerfile  Dockerfile.alembic  README.md  alembic.ini  docker-compose.yml  envexample  pyproject.toml
alembic/: env.py
alembic/versions/: 3be82fc52981_edit_type.py  4b4bc59a73b1_updated_transaction_model.py  5a957ee8b020_initial_migration.py  626591323746_recreate_initial_migrations.py  888443fcac6b_adding_new_fields.py
app/: config.py  deps.py  main.py  utils.py
app/api/: deps.py
app/api/v1/endpoints/: __init__.py  transactions.py
app/celery/: beat.py  celery_config.py  tasks.py
app/core/: cache.py  config.py  logging.py  settings.py
app/core/celery/: __init__.py  celery_config.py  tasks.py
app/core/providers/: web3_provider.py
app/crud/: __init__.py  base.py  transaction.py  transaction_crud.py
app/db/: database.py  session.py
app/models/: __init__.py  transaction_models.py
app/schemas/: __init__.py  transaction_schemas.py
app/services/: blockchair_services.py  ethereum_servises.py  infura_services.py
tests/: test_cache.py  test_celery.py  test_db.py  test_infura.py  test_main.py  test_transactions.py
