[tool.poetry]
name = "eth-transaction-processor"
version = "0.1.0"
description = ""
authors = ["poligrafo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
sqlalchemy = "^2.0.32"
databases = "^0.9.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.8.2"
web3 = "^6.20.1"
uvicorn = "^0.30.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
